Complete User Profile Mechanism
