# server/rest/user.go
@@ -14,6 +14,11 @@ import (
 	"gorm.io/gorm"
 )
 
+var (
+    // ErrProfileNotFound is returned when a user's profile is not found.
+    ErrProfileNotFound = errors.New("profile not found controller")
+)
+
 // @Summary Create a new user
 // @Description Create a new user with a unique username and password
 // @Tags user
@@ -72,8 +77,6 @@ func (s *Server) createUser(ctx *gin.Context) {
 
 	ctx.JSON(http.StatusCreated, gin.H{"message": "user created successfully"})
 }
-
-
 
 // @Summary Log in as an user
 // @Description Log in as an user with a valid username and password
@@ -188,61 +191,60 @@ func (s *Server) logout(ctx *gin.Context) {
 // @Success 201 {object} map[string]interface{} "Successfully created user profile"
 // @Failure 400 {object} ErrorResponse "Bad Request"
 // @Failure 401 {object} ErrorResponse "Unauthorized"
+// @Failure 409 {object} ErrorResponse "Conflict" 
 // @Failure 500 {object} ErrorResponse "Internal Server Error"
 // @Router /api/users/profile [post]
 func (s *Server) profile(ctx *gin.Context) {
-	var req CreateUserProfileRequest
-	err := ctx.ShouldBindJSON(&req)
-	if err != nil {
-		logger.Error(ctx, "cannot pass validation", err)
-		ctx.JSON(http.StatusBadRequest, s.svc.Error(ctx, util.EN_API_PARAMETER_INVALID_ERROR, "Bad request"))
-		return
-	}
+    var req CreateUserProfileRequest
+    err := ctx.ShouldBindJSON(&req)
+    if err != nil {
+        logger.Error(ctx, "cannot pass validation", err)
+        ctx.JSON(http.StatusBadRequest, s.svc.Error(ctx, util.EN_API_PARAMETER_INVALID_ERROR, "Bad request"))
+        return
+    }
 
-	authPayload := ctx.MustGet(authorizationPayloadKey).(Payload)
+    authPayload := ctx.MustGet(authorizationPayloadKey).(Payload)
 
-	// Check if the user profile already exists
-	profile, err := s.svc.GetUserProfile(ctx, authPayload.ID)
-	if err != nil {
-		logger.Error(ctx, "error fetching user profile", err)
-		ctx.JSON(http.StatusInternalServerError, s.svc.Error(ctx, util.EN_INTERNAL_SERVER_ERROR, "Internal server error"))
-		return
-	}
+    profile, err := s.svc.GetUserProfile(ctx, authPayload.ID)
+    if err != nil {
+        logger.Error(ctx, "error fetching user profile", err)
+        // If there's an error, it means the user's profile doesn't exist, so proceed to create it.
+    } else if profile != nil {
+        // A profile already exists for this user
+        ctx.JSON(http.StatusConflict, s.svc.Error(ctx, util.EN_ALREADY_REGISTERED_ERROR, "Already Registered"))
+        return
+    }
 
-	if profile != nil {
-		// A profile already exists for this user
-		ctx.JSON(http.StatusConflict, s.svc.Error(ctx, util.EN_ALREADY_REGISTERED_ERROR, "Already Registered"))
-		return
-	}
+    // If profile is nil or there's an error, it means the user's profile doesn't exist, so proceed to create the profile.
 
-	userID, err := uuid.NewUUID()
-	if err != nil {
-		logger.Error(ctx, "cannot generate user id", err)
-		ctx.JSON(http.StatusInternalServerError, s.svc.Error(ctx, util.EN_INTERNAL_SERVER_ERROR, "Internal server error"))
-		return
-	}
+    userID, err := uuid.NewUUID()
+    if err != nil {
+        logger.Error(ctx, "cannot generate user id", err)
+        ctx.JSON(http.StatusInternalServerError, s.svc.Error(ctx, util.EN_INTERNAL_SERVER_ERROR, "Internal server error"))
+        return
+    }
 
-	profile = &svc.Profile{
-		ID:           userID.String(),
-		UserID:       authPayload.ID,
-		BusinessName: req.BusinessName,
-		BusinessLead: req.BusinessLead,
-		Email:        req.Email,
-		KAMName:      req.KamName,
-		Nid:          req.NID,
-		PocMobile:    req.PocMobile,
-		CreatedAt:    util.GetCurrentTimestamp(),
-	}
+    profile = &svc.Profile{
+        ID:           userID.String(),
+        UserID:       authPayload.ID,
+        BusinessName: req.BusinessName,
+        BusinessLead: req.BusinessLead,
+        Email:        req.Email,
+        KAMName:      req.KamName,
+        Nid:          req.NID,
+        PocMobile:    req.PocMobile,
+        CreatedAt:    util.GetCurrentTimestamp(),
+    }
 
-	userProfile, err := s.svc.CreateUserProfile(ctx, authPayload.ID, profile)
+    userProfile, err := s.svc.CreateUserProfile(ctx, authPayload.ID, profile)
 
-	if err != nil {
-		logger.Error(ctx, "cannot store user into db", err)
-		ctx.JSON(http.StatusInternalServerError, s.svc.Error(ctx, util.EN_INTERNAL_SERVER_ERROR, "Internal server error"))
-		return
-	}
+    if err != nil {
+        logger.Error(ctx, "cannot store user into db", err)
+        ctx.JSON(http.StatusInternalServerError, s.svc.Error(ctx, util.EN_INTERNAL_SERVER_ERROR, "Internal server error"))
+        return
+    }
 
-	ctx.JSON(http.StatusCreated, s.svc.Response(ctx, "Successfully created", userProfile))
+    ctx.JSON(http.StatusCreated, s.svc.Response(ctx, "Successfully created", userProfile))
 }
 
 
